[gd_scene load_steps=2 format=2]

[ext_resource path="res://Globals/Managers/AudioManager.gd" type="Script" id=1]

[node name="AudioManager" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BattleMusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "StandardMusic"

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "MenuMusic"

[node name="BossMusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "BossMusic"

[node name="Tween" type="Tween" parent="."]
